fix : text overflow

--- a/scss/components/_recipe-card.scss
+++ b/scss/components/_recipe-card.scss
@@ -13,6 +13,7 @@
 	}
 	&__recipe {
 		width: 100%;
+		height: 190px;
 		background-color: #E7E7E7;
 		border-radius: 0 0 5px 5px;
 		padding: 20px 15px 20px 20px;
@@ -47,7 +48,12 @@
 
 	&__recipe-ingredients {
 		flex: 1 0 46%;
+		max-width: 48%; 
 		line-height: 14px;
+		overflow: hidden;
+		overflow-wrap: break-word;
+		max-height: 96px;
+		
 	}
 
 	&__recipe-guide {
